fix logo width on small displays

--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -33,6 +33,11 @@
 			  height: $header-logo-height;
 			  margin: $header-logo-margin;
 			  max-width: 100%;
+
+				@media (max-width:$screen-xs-max) {
+					height: auto;
+					width: 200px;
+				}
 		}
 
 		&__positive {
